<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_charcoal"
    android:orientation="vertical"
    tools:context=".Register"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/knot_tracker_logo_white"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_200"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/oxanium_bold"
            android:padding="20dp"
            android:text="@string/please_fill_in_the_following_fields_then_click_register_to_create_an_account"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/scouts_purple"
            android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextUserName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:drawableStart="@drawable/reg_username"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text=""
        android:minHeight="50dp"
        android:textAlignment="center"
        android:textColor="@color/purple_2"
        android:textColorHint="@color/purple_2"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextFirstNameReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editTextTextFirstNameReg"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:drawableStart="@drawable/person_reg"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:minHeight="50dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/purple_2"
        android:textColorHint="@color/purple_2"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextLastNameReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUserName" />

    <EditText
        android:id="@+id/editTextTextLastNameReg"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:drawableStart="@drawable/person_reg"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:minHeight="50dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/purple_2"
        android:textColorHint="@color/purple_2"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextFirstNameReg" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:drawableStart="@drawable/email_reg"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:textColor="@color/purple_2"
        android:textColorHint="@color/purple_2"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextLastNameReg" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:drawableStart="@drawable/password_reg"
        android:elevation="10dp"
        android:ems="10"
        android:minHeight="50dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/purple_2"
        android:textColorHint="@color/purple_2"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPasswordConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPasswordConfirm"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:drawableStart="@drawable/password_reg"
        android:elevation="10dp"
        android:ems="10"
        android:minHeight="50dp"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/purple_2"
        android:textColorHint="@color/purple_2"
        app:layout_constraintBottom_toTopOf="@+id/buttonReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:elevation="10dp"
        android:onClick="registerUser"
        android:padding="20dp"
        android:text="@string/register_reg"
        android:textColor="#311B92"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackToMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordConfirm"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/buttonBackToMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:elevation="10dp"
        android:onClick="backToMenu"
        android:padding="20dp"
        android:text="@string/back_to_menu"
        android:textColor="#311B92"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReg"
        tools:ignore="VisualLintBounds" />


</androidx.constraintlayout.widget.ConstraintLayout>