<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_graphic_2"
    tools:context=".ListOfKnotsFragment">


    <TextView
        android:id="@+id/textViewKnotCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/knot_categories"
        android:padding="20dp"
        android:textColor="@color/scouts_purple"
        android:fontFamily="@font/oxanium_bold"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <ImageView
        android:id="@+id/imageViewSixBasicKnots"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:padding="10dp"
        android:src="@drawable/reef_knot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKnotCategories"
        app:layout_constraintVertical_bias="0.095"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewWhippingKnots"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:padding="10dp"
        android:src="@drawable/whipping_knot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGeneralKnotsLabel"
        app:layout_constraintVertical_bias="0.159"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:fontFamily="@font/oxanium_bold"
        android:padding="8dp"
        android:text="@string/whipping"
        android:textAlignment="center"
        android:textColor="@color/scouts_purple"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWhippingKnots"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:fontFamily="@font/oxanium_bold"
        android:padding="8dp"
        android:text="@string/lashings"
        android:textAlignment="center"
        android:textColor="@color/scouts_purple"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewGeneralKnots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLashingKnots"
        app:layout_constraintVertical_bias="0.375"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageViewHitchKnots"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:src="@drawable/clove_hitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSixBasicKnots"
        app:layout_constraintVertical_bias="0.163"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewGeneralKnotsLabel"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:fontFamily="@font/oxanium_bold"
        android:padding="8dp"
        android:text="@string/generalKnots"
        android:textAlignment="center"
        android:textColor="@color/scouts_purple"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGeneralKnots"
        app:layout_constraintVertical_bias="0.007" />

    <ImageView
        android:id="@+id/imageViewGeneralKnots"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:padding="10dp"
        android:src="@drawable/splice_knot_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toEndOf="@+id/imageViewHitchKnots"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLashingKnots"
        app:layout_constraintVertical_bias="0.165"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:fontFamily="@font/oxanium_bold"
        android:padding="8dp"
        android:text="@string/hitches"
        android:textAlignment="center"
        android:textColor="@color/scouts_purple"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHitchKnots"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:fontFamily="@font/oxanium_bold"
        android:padding="8dp"
        android:text="@string/the_6_basic_knots"
        android:textAlignment="center"
        android:textColor="@color/scouts_purple"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewHitchKnots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSixBasicKnots"
        app:layout_constraintVertical_bias="0.176"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageViewLashingKnots"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/category_background"
        android:elevation="10dp"
        android:padding="10dp"
        android:src="@drawable/sheet_knot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toEndOf="@+id/imageViewSixBasicKnots"
        app:layout_constraintTop_toBottomOf="@+id/textViewKnotCategories"
        app:layout_constraintVertical_bias="0.094"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>